--- a/apps/SdkController/SdkControllerMultitouch/AndroidManifest.xml
+++ b/apps/SdkController/SdkControllerMultitouch/AndroidManifest.xml
@@ -22,6 +22,7 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="7" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -29,10 +30,11 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
-            android:label="@string/app_name"
+            android:name=".SdkControllerMultitouchActivity"
             android:configChanges="orientation|keyboardHidden|mcc|mnc|locale|touchscreen|keyboard|navigation|screenLayout|fontScale"
-            android:name=".SdkControllerMultitouchActivity" >
-            <intent-filter >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
