Fork javac on windows to prevent file locking. do not merge.
On Windows, when using java 1.5/1.6 running javac without
fork=true can result in file locking preventing further changes
to them.

This changes sets fork=true in this case (win, java 1.5/1.6).

More info: http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6558476

Bug: 24577

(cherry picked from commit baeef7fd3828cd609d7f6f8065466b706928dacb)

Change-Id: I33acc5bd80767842cb416f598407695096168c50

--- a/files/ant/build.xml
+++ b/files/ant/build.xml
@@ -188,6 +188,17 @@
     <!-- properties for packaging -->
     <property name="build.packaging.nocrunch" value="true" />
 
+    <!-- whether we need to fork javac.
+         This is only needed on Windows when running Java < 7 -->
+    <condition else="false" property="need.javac.fork">
+        <and>
+            <matches pattern="1\.[56]" string="${java.specification.version}"/>
+            <not>
+                <os family="unix"/>
+            </not>
+        </and>
+    </condition>
+
     <!-- ******************************************************* -->
     <!-- ************************ Macros *********************** -->
     <!-- ******************************************************* -->
@@ -657,7 +668,8 @@
                     bootclasspathref="android.target.classpath"
                     verbose="${verbose}"
                     classpath="${extensible.classpath}"
-                    classpathref="jar.libs.ref">
+                    classpathref="jar.libs.ref"
+                    fork="${need.javac.fork}">
                 <src path="${source.absolute.dir}" />
                 <src path="${gen.absolute.dir}" />
                 <classpath>
