Ensure R/Manifest/BuildConfig classes are not added to the library jar file. do not merge
First, their are not needed there, second they can create a dx conflict
if the library uses the same package as the app.

(cherry picked from commit da1c452fe47ca12fa89156531e78a3ab218fdbe9)

Change-Id: Ic45f30e0908b954b7de1ba58ba56d8be45868c48

--- a/files/ant/build.xml
+++ b/files/ant/build.xml
@@ -108,6 +108,10 @@
             classname="com.android.ant.IfElseTask"
             classpathref="android.antlibs" />
 
+    <taskdef name="propertybyreplace"
+            classname="com.android.ant.PropertyByReplaceTask"
+            classpathref="android.antlibs" />
+
     <!-- Emma configuration -->
     <property name="emma.dir" value="${sdk.dir}/tools/lib" />
     <path id="emma.lib">
@@ -690,8 +694,12 @@
                             <echo>Custom jar packaging exclusion: ${android.package.excludes}</echo>
                         </then>
                     </if>
+
+                    <propertybyreplace name="manifest.package.path" input="${manifest.package}" replace="." with="/" />
+
                     <jar destfile="${out.library.jar.file}">
-                        <fileset dir="${out.classes.absolute.dir}" excludes="**/R.class **/R$*.class"/>
+                        <fileset dir="${out.classes.absolute.dir}"
+                                excludes="${manifest.package.path}/R.class ${manifest.package.path}/R$*.class ${manifest.package.path}/Manifest.class ${manifest.package.path}/Manifest$*.class ${manifest.package.path}/BuildConfig.class"/>
                         <fileset dir="${source.absolute.dir}" excludes="**/*.java ${android.package.excludes}" />
                     </jar>
                 </then>
