Improve "ant all clean" to clean libraries only once. do not merge.
This is done by going through the flat dependency of the main
project and not having the libs look at their own dependencies.
This is similar to what has been done for the regular build steps.

(cherry picked from commit ee01dd0e2dfc082fbe4c5f73d0ea27df49e217a9)

Change-Id: I9305d53d983274a2f07cb552f492e010d2598226

--- a/files/ant/build.xml
+++ b/files/ant/build.xml
@@ -421,13 +421,14 @@
         <if>
             <condition>
                 <isreference refid="project.libraries" />
+                <not><isset property="dont.do.deps" /></not>
             </condition>
             <then>
                 <subant
                         buildpathref="project.libraries"
                         antfile="build.xml"
                         failonerror="true">
-                    <target name="all" />
+                    <target name="nodeps" />
                     <target name="clean" />
                 </subant>
             </then>
