Only generate the libraries R/manifest classes in the app project. do not merge.
If the project is a library itself then there's no need to generate
them.

(cherry picked from commit 314a75226677df8933fd38824e9510acde90fe87)

Change-Id: Icffb5d9539d4e2c78fedd7d5e8e1481921fe7d6f

--- a/files/ant/build.xml
+++ b/files/ant/build.xml
@@ -700,7 +700,7 @@
 
                     <jar destfile="${out.library.jar.file}">
                         <fileset dir="${out.classes.absolute.dir}"
-                                excludes="**/R.class **/R$*.class ${manifest.package.path}/Manifest.class ${manifest.package.path}/Manifest$*.class ${manifest.package.path}/BuildConfig.class"/>
+                                excludes="${manifest.package.path}/R.class ${manifest.package.path}/R$*.class ${manifest.package.path}/Manifest.class ${manifest.package.path}/Manifest$*.class ${manifest.package.path}/BuildConfig.class"/>
                         <fileset dir="${source.absolute.dir}" excludes="**/*.java ${android.package.excludes}" />
                     </jar>
                 </then>
