ADT: Rename AddCompatibilityJarAction.
It's time we rename this to AddSupportJarAction.
This is just a rename refactoring of that class name
as well as the one of CompatibilityLibraryHelper.

No logic is being changed.

(cherry picked from commit b8397698e2834ed8af03c1bff7d570aff0e2f5bb)

Change-Id: I3cc15f67c3c74edceabe57917bd839d46a0fdc05

--- a/eclipse/plugins/com.android.ide.eclipse.adt/plugin.xml
+++ b/eclipse/plugins/com.android.ide.eclipse.adt/plugin.xml
@@ -467,7 +467,7 @@
                 label="Fix Project Properties"
                 menubarPath="com.android.ide.eclipse.adt.AndroidTools/group3" />
             <action
-                class="com.android.ide.eclipse.adt.internal.actions.AddCompatibilityJarAction"
+                class="com.android.ide.eclipse.adt.internal.actions.AddSupportJarAction"
                 enablesFor="1"
                 icon="icons/android.png"
                 id="com.android.ide.eclipse.adt.wizards.actions.AddCompatibilityJarAction"
