--- a/files/ant/build.xml
+++ b/files/ant/build.xml
@@ -632,7 +632,7 @@
             <echo level="info">----------</echo>
             <echo level="info">Handling RenderScript files...</echo>
             <renderscript executable="${renderscript}"
-                    includePath="${android.renderscript.include.path}"
+                    includePathRefId="android.renderscript.include.path"
                     genFolder="${gen.absolute.dir}"
                     resFolder="${out.res.absolute.dir}/raw"
                     targetApi="${project.minSdkVersion}"
