monitor: Move from sdk/ to sdk/eclipse
The monitor Gradle build script assumed that the version of
monitor matches the tools. However, it really matches the version
of the Eclipse plugins. This CL moves monitor into the eclipse
folder so that the version updater script handles the version
encoded inside monitor's build script.

Change-Id: I31e70bfc705af00fbaacde417cf505740701038b

--- a/eclipse/monitor/build.gradle
+++ b/eclipse/monitor/build.gradle
@@ -1,9 +1,6 @@
 apply plugin: 'sdk-files'
 
-// See $ANDROID_SRC/tools/buildSrc/base/version.gradle for definition of baseVersion
-// However, if Eclipse bundles don't get the same version as tools baseVersion, then this
-// will have to be hard coded and fixed by sdk/eclipse/scripts/update_version.sh
-def basePath = "../../out/host/maven/bundles-${rootProject.ext.baseVersion}-SNAPSHOT/products/"
+def basePath = "../../../out/host/maven/bundles-23.0.3-SNAPSHOT/products/"
 
 sdk {
     linux {
