emulator/opengl/emugen: Add new 'flushOnEncode' entry point flag.
This adds a new flag that can be applied to entry points for 'emugen',
named 'flushOnEncode'. When used, the generated encoder will call
stream->flush() just after adding bytes to the stream.

This is needed to match the manual change that was performed in
the renderControl encoder in the following patch:

    https://android-review.googlesource.com/#/c/95864/

Change-Id: I8cc8fdb0d38ef27e8ba646c83d717166400babfd
(cherry picked from commit c8f4ebe81beb0ee0a10d466bc5559fc0d9c783e8)

--- a/emulator/opengl/host/tools/emugen/tests/t.001/input/foo.in
+++ b/emulator/opengl/host/tools/emugen/tests/t.001/input/foo.in
@@ -1,3 +1,4 @@
 FOO_ENTRY(void, fooAlphaFunc, FooInt func, FooFloat ref)
 FOO_ENTRY(FooBoolean, fooIsBuffer, void* stuff)
 FOO_ENTRY(void, fooUnsupported, void* params)
+FOO_ENTRY(void, fooDoEncoderFlush, FooInt param)
