Build and package 32/64bit find_java.
Change-Id: I93a2e42fb0a81d1495bb12b657b6bd6a597a128e

--- a/avdlauncher/build.gradle
+++ b/avdlauncher/build.gradle
@@ -19,17 +19,17 @@ sources {
 
 sdk {
     windows {
-        item( { getExeName("windows") } ) {
+        item( { getExeName("windows32AvdLauncherExecutable") } ) {
             into 'lib'
             name 'AVD Manager.exe'
-            builtBy 'avdLauncherExecutable'
+            builtBy 'windows32AvdLauncherExecutable'
         }
     }
 }
 
-def getExeName(String platform) {
+def getExeName(String name) {
     // binaries will return a set of binaries
-    def binaries = executables.avdLauncher.binaries.matching { it.name == "avdLauncherExecutable" }
+    def binaries = executables.avdLauncher.binaries.matching { it.name == name }
     // calling .exeFile on the set returns an array with the result from each item in the set...
     return binaries.executableFile.get(0)
 }
