--- a/find_java/build.gradle
+++ b/find_java/build.gradle
@@ -2,16 +2,16 @@ apply plugin: 'cpp'
 apply plugin: 'sdk-files'
 apply plugin: 'windows-setup'
 
-executables {
-    findJava {}
-}
-
-sources {
-    findJava {
-        cpp {
-            source {
-                srcDir "src/source"
-                include "**/*.cpp"
+model {
+    components {
+        findJava(NativeExecutableSpec) {
+            sources {
+                cpp {
+                    source {
+                        srcDir "src/source"
+                        include "**/*.cpp"
+                    }
+                }
             }
         }
     }
@@ -40,7 +40,7 @@ sdk {
 
 def getExeName(String name) {
     // binaries will return a set of binaries
-    def binaries = executables.findJava.binaries.matching { it.name == name }
+    def binaries = components.findJava.binaries.matching { it.name == name }
     // calling .exeFile on the set returns an array with the result from each item in the set...
     return binaries.executableFile.get(0)
 }
