Add targetPlatform for executable binaries
Make dsl changes due to gradle update.

Change-Id: I65729783f5c8f985ed31a231e7dd9a0b9e50f7b3

--- a/avdlauncher/build.gradle
+++ b/avdlauncher/build.gradle
@@ -2,35 +2,33 @@ apply plugin: 'c'
 apply plugin: 'sdk-files'
 apply plugin: 'windows-setup'
 
-executables {
-    avdLauncher {}
-}
-
-sources {
-    avdLauncher {
-        c {
-            source {
-                srcDir "src/source"
-                include "**/*.c"
+model {
+    components {
+        avdLauncher(NativeExecutableSpec) {
+            sources {
+                c {
+                    source {
+                        srcDir "src/source"
+                        include "**/*.c"
+                    }
+                }
             }
+            targetPlatform "windows32"
         }
     }
 }
 
 sdk {
     windows {
-        item( { getExeName("windows32AvdLauncherExecutable") } ) {
+        item( { getExeName("avdLauncherExecutable") } ) {
             into 'lib'
             name 'AVD Manager.exe'
-            builtBy 'windows32AvdLauncherExecutable'
+            builtBy 'avdLauncherExecutable'
         }
     }
 }
 
 def getExeName(String name) {
-    // binaries will return a set of binaries
-    def binaries = executables.avdLauncher.binaries.matching { it.name == name }
-    // calling .exeFile on the set returns an array with the result from each item in the set...
-    return binaries.executableFile.get(0)
+    return binaries.getByName(name).executableFile
 }
 
