--- a/emulator/mksdcard/build.gradle
+++ b/emulator/mksdcard/build.gradle
@@ -2,17 +2,20 @@ apply plugin: 'c'
 apply plugin: 'sdk-files'
 apply plugin: 'native-setup'
 
-executables {
-    mksdcard {}
-}
-
-sources {
-    mksdcard {
-        c {
-            source {
-                srcDir "src/source"
-                include "**/*.c"
+model {
+    components {
+        mksdcard(NativeExecutableSpec) {
+            sources {
+                c {
+                    source {
+                        srcDir "src/source"
+                        include "**/*.c"
+                    }
+                }
             }
+            targetPlatform "darwin"
+            targetPlatform "linux"
+            targetPlatform "windows32"
         }
     }
 }
@@ -43,9 +46,6 @@ sdk {
 }
 
 def getExeName(String platform) {
-    // binaries will return a set of binaries
-    def binaries = executables.mksdcard.binaries.matching { it.name == "${platform}MksdcardExecutable" }
-    // calling .exeFile on the set returns an array with the result from each item in the set...
-    return binaries.executableFile.get(0)
+    return binaries.getByName("${platform}MksdcardExecutable").executableFile
 }
 
