Add targetPlatform for executable binaries
Make dsl changes due to gradle update.

Change-Id: I01e6155155397a14a2cc0afe2b67988a4f692e06

--- a/avdlauncher/build.gradle
+++ b/avdlauncher/build.gradle
@@ -13,24 +13,22 @@ model {
                     }
                 }
             }
+            targetPlatform "windows32"
         }
     }
 }
 
 sdk {
     windows {
-        item( { getExeName("windows32AvdLauncherExecutable") } ) {
+        item( { getExeName("avdLauncherExecutable") } ) {
             into 'lib'
             name 'AVD Manager.exe'
-            builtBy 'windows32AvdLauncherExecutable'
+            builtBy 'avdLauncherExecutable'
         }
     }
 }
 
 def getExeName(String name) {
-    // binaries will return a set of binaries
-    def binaries = components.avdLauncher.binaries.matching { it.name == name }
-    // calling .exeFile on the set returns an array with the result from each item in the set...
-    return binaries.executableFile.get(0)
+    return binaries.getByName(name).executableFile
 }
 
