--- a/emulator/mksdcard/build.gradle
+++ b/emulator/mksdcard/build.gradle
@@ -13,6 +13,9 @@ model {
                     }
                 }
             }
+            targetPlatform "darwin"
+            targetPlatform "linux"
+            targetPlatform "windows32"
         }
     }
 }
@@ -43,9 +46,6 @@ sdk {
 }
 
 def getExeName(String platform) {
-    // binaries will return a set of binaries
-    def binaries = components.mksdcard.binaries.matching { it.name == "${platform}MksdcardExecutable" }
-    // calling .exeFile on the set returns an array with the result from each item in the set...
-    return binaries.executableFile.get(0)
+    return binaries.getByName("${platform}MksdcardExecutable").executableFile
 }
 
