--- a/emulator/mksdcard/build.gradle
+++ b/emulator/mksdcard/build.gradle
@@ -2,20 +2,17 @@ apply plugin: 'c'
 apply plugin: 'sdk-files'
 apply plugin: 'native-setup'
 
-model {
-    components {
-        mksdcard(NativeExecutableSpec) {
-            sources {
-                c {
-                    source {
-                        srcDir "src/source"
-                        include "**/*.c"
-                    }
-                }
+executables {
+    mksdcard {}
+}
+
+sources {
+    mksdcard {
+        c {
+            source {
+                srcDir "src/source"
+                include "**/*.c"
             }
-            targetPlatform "darwin"
-            targetPlatform "linux"
-            targetPlatform "windows32"
         }
     }
 }
@@ -46,6 +43,9 @@ sdk {
 }
 
 def getExeName(String platform) {
-    return binaries.getByName("${platform}MksdcardExecutable").executableFile
+    // binaries will return a set of binaries
+    def binaries = executables.mksdcard.binaries.matching { it.name == "${platform}MksdcardExecutable" }
+    // calling .exeFile on the set returns an array with the result from each item in the set...
+    return binaries.executableFile.get(0)
 }
 
