--- a/find_java/build.gradle
+++ b/find_java/build.gradle
@@ -2,19 +2,17 @@ apply plugin: 'cpp'
 apply plugin: 'sdk-files'
 apply plugin: 'windows-setup'
 
-model {
-    components {
-        findJava(NativeExecutableSpec) {
-            sources {
-                cpp {
-                    source {
-                        srcDir "src/source"
-                        include "**/*.cpp"
-                    }
-                }
+executables {
+    findJava {}
+}
+
+sources {
+    findJava {
+        cpp {
+            source {
+                srcDir "src/source"
+                include "**/*.cpp"
             }
-            targetPlatform "windows32"
-            targetPlatform "windows64"
         }
     }
 }
@@ -41,6 +39,9 @@ sdk {
 }
 
 def getExeName(String name) {
-    return binaries.getByName(name).executableFile
+    // binaries will return a set of binaries
+    def binaries = executables.findJava.binaries.matching { it.name == name }
+    // calling .exeFile on the set returns an array with the result from each item in the set...
+    return binaries.executableFile.get(0)
 }
 
