--- a/eclipse/monitor/build.gradle
+++ b/eclipse/monitor/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'sdk-files'
 
-def basePath = "../../../out/host/maven/bundles-24.0.2-SNAPSHOT/products/"
+def basePath = "../../../out/host/maven/bundles-24.1.2-SNAPSHOT/products/"
 
 sdk {
     linux {
@@ -63,7 +63,7 @@ def pluginsToRemove = [
     'org.eclipse.help.webapp_3.6.101.v20130116-182509.jar',
     'org.eclipse.help.ui_3.5.201.v20130108-092756.jar',
     'org.eclipse.help.base_3.6.101.v201302041200.jar',
-    'org.eclipse.team.core_3.6.100.v20120524-0627.jar',
+    'org.eclipse.team.core_3.6.100.v20120524.1.27.jar',
     'org.eclipse.jetty.server_8.1.3.v20120522.jar',
     'org.eclipse.ui.intro_3.4.200.v20120521-2344.jar',
     'org.eclipse.ui.cheatsheets_3.4.200.v20120521-2344.jar',
